--- a/rpc_manager/server/CMakeLists.txt
+++ b/rpc_manager/server/CMakeLists.txt
@@ -1,1 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
+project(rpc_server LANGUAGES CXX)
+
+# 搜索头文件路径
+include_directories(
+    ${CMAKE_SOURCE_DIR}/rpc_manager/server/
+)
