--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 # 添加子模块
 add_subdirectory(utils)
+add_subdirectory(proto)
 
 
-add_subdirectory(test)
+# add_subdirectory(test)
 
 # 启用测试
 enable_testing()
