添加gtest单元测试

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,20 @@
-# 添加模块 test 的头文件搜索路径
-include_directories(
-  ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
 
-# 添加模块 main 的源文件
-set(SOURCE
+find_package(GTest REQUIRED)
+
+# 添加可执行程序
+add_executable(mytest
   src/main.cpp
 )
 
-# 生成模块 hello 的静态库
-# add_library(hello STATIC ${SOURCE})
+# 添加头文件目录
+target_include_directories(mytest PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
-add_executable(test ${SOURCE})
+# 链接库
+target_link_libraries(mytest
+  PRIVATE
+    GTest::gtest
+    GTest::gtest_main
+    utils
+)
