add monitor and fix rpcclient

--- a/rpc_manager/client/CMakeLists.txt
+++ b/rpc_manager/client/CMakeLists.txt
@@ -1,1 +1,13 @@
-cmake_minimum_required(VERSION 3.10)
+
+set(CLIENT_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/client.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcClient.cpp
+)
+
+add_library(client ${CLIENT_SOURCE})
+
+target_link_libraries(client
+    PUBLIC  
+        monitor_proto
+        logger
+)
