--- a/rpc_manager/server/CMakeLists.txt
+++ b/rpc_manager/server/CMakeLists.txt
@@ -1,4 +1,13 @@
-# 搜索头文件路径
-include_directories(
-    ${CMAKE_SOURCE_DIR}/rpc_manager/server/
+
+set(SERVER_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/server.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcServer.cpp
+)
+
+add_executable(server ${SERVER_SOURCE})
+target_include_directories(server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(server 
+    PUBLIC 
+        monitor_proto 
+        logger
 )
