--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 设置编译为静态库
-set(BUILD_SHARED_LIBS ON)
+set(BUILD_SHARED_LIBS OFF)
 
 # 设置可执行文件的保存路径
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -21,6 +21,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 add_subdirectory(utils)  # 工具模块
 add_subdirectory(proto)  # 通信协议模块
 add_subdirectory(log_manager)  # 日志管理模块
+add_subdirectory(rpc_manager)
 add_subdirectory(monitor) # 监测模块
 add_subdirectory(display) # 可视化模块
 add_subdirectory(unit_test)  # 单元测试模块
