--- a/rpc_manager/client/CMakeLists.txt
+++ b/rpc_manager/client/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+find_package(gRPC CONFIG REQUIRED)
+
 set(CLIENT_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/client.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcClient.cpp
@@ -13,4 +15,6 @@ target_link_libraries(client
     PUBLIC  
         monitor_proto
         logger
+        gRPC::grpc++ 
+        gRPC::grpc
 )
