modify the logic of client and server

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,11 +9,10 @@ set(UTILS_SOURCES
 )
 
 add_library(utils  ${UTILS_SOURCES})
-# 指定输出目录
-# set_target_properties(utils PROPERTIES
-#     LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib
-# )
-
+target_link_libraries(utils
+    PUBLIC
+        logger
+)
 
 target_include_directories(utils PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}/include
