--- a/rpc_manager/client/CMakeLists.txt
+++ b/rpc_manager/client/CMakeLists.txt
@@ -4,7 +4,27 @@ find_package(gRPC CONFIG REQUIRED)
 set(CLIENT_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/client.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcClient.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/RpcClientManager.cpp
 )
+
+# ###########
+find_package(GTest REQUIRED)
+add_executable(client_exec ${CLIENT_SOURCE})
+target_include_directories(client_exec PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+target_link_libraries(client_exec
+    PUBLIC  
+        monitor_proto
+        logger
+        utils
+        gRPC::grpc++ 
+        gRPC::grpc
+        GTest::gtest
+        GTest::gtest_main
+)
+# ###########
+
 
 add_library(client ${CLIENT_SOURCE})
 target_include_directories(client PUBLIC
@@ -15,6 +35,10 @@ target_link_libraries(client
     PUBLIC  
         monitor_proto
         logger
+        utils
         gRPC::grpc++ 
         gRPC::grpc
+
+        GTest::gtest
+        GTest::gtest_main
 )
