fix display of cpu info

--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -6,17 +6,28 @@ find_package(Qt5
     REQUIRED COMPONENTS
     Core
     Widgets
+)
 
+set(CMAKE_AUTOMOC ON)  # 启用自动 moc
+set(CMAKE_AUTOUIC ON)   # 如果用 ui
+# set(CMAKE_AUTORCC ON)   # 如果用 qrc
+
+set(DISPLAY_HEADER
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/QMonitorBase.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuInfoModel.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/QMonitorMainWidget.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/Worker.hpp
 )
 
 set(DISPLAY_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/display.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Worker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuInfoModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorBase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorMainWidget.cpp
 )
 
-add_executable(display ${DISPLAY_SOURCE})
+add_executable(display ${DISPLAY_SOURCE} ${DISPLAY_HEADER})
 target_include_directories(display PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(display
     PRIVATE
