--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -15,6 +15,7 @@ set(CMAKE_AUTOUIC ON)   # 如果用 ui
 set(DISPLAY_HEADER
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QMonitorBase.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuInfoModel.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuLoadModel.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QMonitorMainWidget.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Worker.hpp
 )
@@ -23,6 +24,7 @@ set(DISPLAY_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/display.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Worker.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuInfoModel.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuLoadModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorBase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorMainWidget.cpp
 )
