--- a/monitor/CMakeLists.txt
+++ b/monitor/CMakeLists.txt
@@ -3,6 +3,7 @@ set(MONITOR_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/monitor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/CpuInfoMonitor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/CpuLoadMonitor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/CpuSoftIrqsMonitor.cpp
 )
 
 add_executable(monitor ${MONITOR_SOURCE})
