--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -17,6 +17,7 @@ set(DISPLAY_HEADER
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuInfoModel.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuLoadModel.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QCpuSoftIrqsModel.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/QMemInfoModel.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/QMonitorMainWidget.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Worker.hpp
 )
@@ -27,6 +28,7 @@ set(DISPLAY_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuInfoModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuLoadModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QCpuSoftIrqsModel.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/QMemInfoModel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorBase.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/QMonitorMainWidget.cpp
 )
