--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -14,6 +14,7 @@ set(PROTO_FILES
     ${PROTO_DIR}/cpu_load.proto
     ${PROTO_DIR}/cpu_softirqs.proto
     ${PROTO_DIR}/meminfo.proto
+    ${PROTO_DIR}/netinfo.proto
 )
 
 # 获取 gRPC 插件路径
